<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">Ellucian Mobile</string>
    <string name="searchable_institutions_label">Search institutions</string>
    <string name="searchable_institutions_hint">Search institutions</string>
    <string name="menu_search">Search</string>
    <string name="noInstitutions">There are no institutions to display at this time.</string>
    <string name="menu_clear">Clear</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="switchSchool">Switch Institutions</string>
    <string name="info">Info</string>
    <string name="versionLabel">Version</string>
    <string name="aboutQuestionLabel">Need help with this application?</string>
    <string name="aboutPoweredBy">Ellucian Mobile - Powered by Ellucian</string>
    <string name="copyright">Copyright Ellucian, Inc.</string>
    <string name="helpWebsite">Helpdesk website</string>
    <string name="helpEmail">Helpdesk e-mail</string>
    <string name="helpCall">Call Helpdesk</string>
    <string name="readFullArticle">View</string>
    <string name="initializingDashboard">Downloading images</string>
    <string name="refresh">Refresh</string>
    <string name="loginButton">Login</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="cancelButton">Cancel</string>
    <string name="loginProgress">Logging in</string>
    <string name="loginFailed">Login failed</string>
    <string name="schoolSelection">Choose Institution</string>
    <string name="news">News</string>
    <string name="newsDetail">News Detail</string>
    <string name="schoolSelectionConfirmation">"You have selected '%1$s'.  Is that correct?"</string>
    <string name="addToMyCalendar">Add to My Calendar</string>
    <string name="shareWithFriends">Share with Friends</string>
    <string name="startDateLabel">Start Date:</string>
    <string name="endDateLabel">End Date:</string>
    <string name="events">Events</string>
    <string name="eventDetail">Event Detail</string>
    <string name="eventEmailTextWithLocation">Date: %2$s %4$s- %3$s %5$s\nLocation: %1$s</string>
    <string name="eventEmailTextWithDescription">Date: %2$s %4$s- %3$s %5$s\nDescription: %1$s</string>
    <string name="eventEmailTextWithDescriptionAndLocation">Date: %3$s %5$s- %4$s %6$s\nLocation: %2$s\nDescription: %1$s</string>
    <string name="eventEmailText">Date: %1$s %3$s- %2$s %4$s</string>
    <string name="impnumDetail">Important Numbers Detail</string>
    <string name="phoneLabel">Phone:</string>
    <string name="emailLabel">Email:</string>
    <string name="addressLabel">Address:</string>
    <string name="showMap">Show Map</string>
    <string name="getDirections">Get Directions</string>
    <string name="searchable_phone_directory_label">Search numbers</string>
    <string name="searchable_phone_directory_hint">Search numbers</string>
    <string name="myLocation">My Location</string>
    <string name="chooseCampus">Choose Campus</string>
    <string name="building_list">Building List</string>
    <string name="searchable_buildings_hint">Search Buildings</string>
    <string name="searchable_buildings_label">Search Buildings</string>
    <string name="descriptionLabel">Description:</string>
    <string name="typeLabel">Type:</string>
    <string name="searchResults">Search Results</string>
    <string name="restoreLocation">Restore Location</string>
    <string name="satelliteView">Satellite View</string>
    <string name="mapView">Map View</string>
    <string name="showDetails">Show Details</string>
    <string name="tellFriendButton">Share this app</string>
    <string name="tellFriendSubject">Our school\'s new mobile app</string>
    <string name="tellFriendText">Check out our school\'s new mobile application\nhttp://www.ellucian.com/\n</string>
    <string name="datePosted">Date Posted:</string>
    <string name="notificationLinkAction">Take Action</string>
    <string name="notifications">Notifications</string>
    <string name="notificationsMessages">"You have %1$s %2$s."</string>
    <string name="notificationsNewMessages">"You have %1$s new %2$s."</string>
    <string name="officeLabel">Office:</string>
    <string name="workLabel">Work:</string>
    <string name="mobileLabel">Mobile:</string>
    <string name="searchable_directory_label">Search directory</string>
    <string name="searchable_directory_hint">Search directory</string>
    <string name="addContact">Add to Contacts</string>
    <string name="webAppUnsupported">Unsupported on this device</string>
    <string name="allDay">All Day Event</string>
    <string name="searchDirectoryEmptyList">Start a search by selecting the search icon and enter a name into the search box.</string>
    <string name="contactAdded">Contact added</string>
    <string name="assignments">Assignments</string>
    <string name="grades">Grades</string>
    <string name="roster">Roster</string>
    <string name="courseAnnouncements">Course Announcements</string>
    <string name="overview">Overview</string>
    <string name="notificationTerm">notification</string>
    <string name="notificationsTerm">notifications</string>
    <string name="noResultsFound">No results found</string>
    <string name="facultyLabel">Faculty:</string>
    <string name="sessionLabel">Session:</string>
    <string name="dateLastUpdated">Date last updated:</string>
    <string name="colon">:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dueLabel">Due:</string>
    <string name="searchable_roster_label">Search roster</string>
    <string name="searchable_roster_hint">Search roster</string>
    <string name="notificationsUpdateFailed">Notifications update failed</string>
    <string name="gradesUpdated">You have grade updates</string>
    <string name="noDataCourseEvents">There are no course events to display at this time.</string>
    <string name="noDataCourseAssignments">There are no assignments to display at this time.</string>
    <string name="announcementDetail">Announcement Detail</string>
    <string name="noLocations">No locations to show</string>
    <string name="userUnlisted">User is unlisted</string>
    <string name="announcements">Announcements</string>
    <string name="noDataBuildingList">There are no building data to display at this time.</string>
    <string name="noDataCourseAnnouncements">There are no course announcements to display at this time.</string>
    <string name="noDataCourse">You have no course data to display at this time.</string>
    <string name="noDataEvents">You have no events to display at this time.</string>
    <string name="noDataCourseGrades">There are no grades to display for this course at this time.</string>
    <string name="noDataGrades">There are no grades to display at this time.</string>
    <string name="noDataPhoneDirectory">There are no entries to display at this time.</string>
    <string name="noDataNews">There are no items to display at this time.</string>
    <string name="noDataNotifications">You have no notifications to display at this time.</string>
    <string name="noDataRoster">There are no entries to display at this time.</string>
    <string name="buildingListTitle">%1$s Buildings</string>
    <string name="enterUsername">Error - Enter a Username</string>
    <string name="enterPassword">Error - Enter a Password</string>
    <string name="buildingImage">Building image</string>
    <string name="newsImage">News article image</string>
    <string name="titlebarIcon">Titlebar icon</string>
    <string name="schoolLogo">School logo</string>
    <string name="button">button</string>
    <string name="image">image</string>
    <string name="space">" "</string>

</resources>