<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:showAsAction="ifRoom" android:id="@+id/menu_my_location" 
	 android:title="@string/myLocation" android:icon="@drawable/ic_menu_mylocation"/>
	<item android:showAsAction="ifRoom" android:id="@+id/menu_restore_default_location"
	 android:title="@string/restoreLocation" android:icon="@drawable/ic_menu_revert"/>
	<item android:showAsAction="ifRoom" android:id="@+id/menu_choose_campus" 
	 android:title="@string/chooseCampus" android:icon="@drawable/ic_menu_campus"/>
	<item android:showAsAction="ifRoom" android:title="@string/menu_search" 
	 android:id="@+id/menu_search" android:icon="@drawable/ic_menu_search"/>
	<item android:showAsAction="ifRoom" android:title="@string/building_list"
	 android:id="@+id/menu_building_list" android:icon="@drawable/ic_menu_building"/>
	<item android:id="@+id/menu_map_satellite" 
	 android:title="@string/satelliteView" android:icon="@drawable/ic_menu_satelite"/>
	<item android:id="@+id/menu_map"
	 android:title="@string/mapView" android:icon="@drawable/ic_menu_map"/>
</menu>
