<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent" android:layout_gravity="center"
	android:layout_width="match_parent" android:orientation="vertical">
	<EditText android:id="@+id/loginUsername" android:inputType="textFilter"
		android:layout_width="250dp" android:layout_height="wrap_content"
		android:singleLine="true" android:hint="@string/username">
		<requestFocus />
	</EditText>
	<EditText android:inputType="textPassword" android:id="@+id/loginPassword"
		android:layout_width="250dp" android:layout_height="wrap_content"
		android:singleLine="true" android:hint="@string/password"></EditText>
	<LinearLayout android:id="@+id/buttonLoginLayout"
		android:layout_height="wrap_content" android:layout_width="match_parent">
		<Button android:id="@+id/loginButton" android:layout_height="wrap_content"
			android:text="@string/loginButton" android:layout_width="match_parent"
			android:layout_weight="1"></Button>
		<Button android:id="@+id/cancelButton" android:layout_height="wrap_content"
			android:text="@string/cancelButton" android:layout_width="match_parent"
			android:layout_weight="1"></Button>
	</LinearLayout>
	<TextView android:layout_height="wrap_content" android:text="@string/space"
		android:id="@+id/loginMessage" android:layout_width="match_parent"
		android:paddingBottom="2sp" android:paddingLeft="10sp"
		android:paddingRight="10sp" android:paddingTop="2sp"></TextView>

</LinearLayout>