<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/customtitlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/buildingImage"
                android:layout_width="290dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/buildingImage"
                android:padding="2sp" >
            </ImageView>

            <LinearLayout
                android:id="@+id/typeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/typeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2sp"
                    android:paddingLeft="6dp"
                    android:paddingTop="2sp"
                    android:text="@string/typeLabel"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/buildingType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:paddingBottom="2sp"
                    android:paddingTop="2sp" >
                </TextView>
            </LinearLayout>

            <include
                android:id="@+id/separatorEmail"
                layout="@layout/separator" >
            </include>

            <LinearLayout
                android:id="@+id/addressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/addressLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text="@string/addressLabel"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/buildingAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2sp"
                    android:paddingLeft="6dp"
                    android:paddingRight="2sp" >
                </TextView>
            </LinearLayout>

            <include
                android:id="@+id/separatorAddress"
                layout="@layout/separator" >
            </include>

            <LinearLayout
                android:id="@+id/descriptionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:text="@string/descriptionLabel"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/buildingDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:paddingBottom="2sp"
                    android:paddingLeft="6dp"
                    android:paddingTop="2sp" >
                </TextView>
            </LinearLayout>

            <include
                android:id="@+id/separatorDescription"
                layout="@layout/separator" >
            </include>

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/showMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12sp"
                    android:padding="12dp"
                    android:text="@string/showMap" >
                </Button>

                <Button
                    android:id="@+id/showDirections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12sp"
                    android:padding="12dp"
                    android:text="@string/getDirections" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>