<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/customtitlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight" >

                <TextView
                    android:id="@+id/phoneLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/phoneLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/impNumPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="phone"
                    android:paddingLeft="4dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>
            </LinearLayout>

            <include
                android:id="@+id/separatorPhone"
                layout="@layout/separator" >
            </include>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight" >

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/emailLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/impNumEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="email"
                    android:paddingLeft="4dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>
            </LinearLayout>

            <include
                android:id="@+id/separatorEmail"
                layout="@layout/separator" >
            </include>

            <LinearLayout
                android:id="@+id/addressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/addresLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/addressLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/impNumAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="6dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" >
                </TextView>
            </LinearLayout>

            <include
                android:id="@+id/separatorAddress"
                layout="@layout/separator" >
            </include>

            <LinearLayout
                android:id="@+id/buttonLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/showMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12sp"
                    android:padding="12dp"
                    android:text="@string/showMap" >
                </Button>

                <Button
                    android:id="@+id/showDirections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12sp"
                    android:padding="12dp"
                    android:text="@string/getDirections" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>