<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/titlebar"
        layout="@layout/customtitlebar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/profileLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/contactLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <ImageView android:contentDescription="@string/image"
                    android:id="@+id/image"
                    android:layout_width="60dp"
                    android:layout_height="74dp"
                    android:paddingRight="6dp"
                    android:scaleType="fitCenter" />

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_height="wrap_content" >
                    </TextView>

                    <TextView
                        android:id="@+id/department"
                        android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_height="wrap_content" >
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <include
                android:id="@+id/separatorContactInfo"
                layout="@layout/separator" >
            </include>

            <LinearLayout
                android:id="@+id/workLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <TextView
                    android:id="@+id/workLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/workLabel" android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="phone" android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="4dp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/mobileLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <TextView
                    android:id="@+id/mobileLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobileLabel" android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/mobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="phone" android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="4dp" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <TextView
                    android:id="@+id/emailLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailLabel" android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="email" android:textAppearance="?android:attr/textAppearanceMedium"
                    android:padding="4dp" >
                </TextView>
            </LinearLayout>

            <include
                android:id="@+id/separatorOffice"
                layout="@layout/separator" >
            </include>

            <LinearLayout
                android:id="@+id/officeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?android:attr/listPreferredItemHeight"
                android:orientation="vertical"
                android:paddingLeft="6dp"
                android:paddingRight="6dp" >

                <TextView
                    android:id="@+id/officeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/officeLabel" android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" >
                </TextView>

                <TextView
                    android:id="@+id/office"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium"
                    android:autoLink="map" >
                </TextView>
            </LinearLayout>

            <include
                android:id="@+id/separatorAddress"
                layout="@layout/separator" >
            </include>

            <Button
                android:id="@+id/addContactButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:enabled="false"
                android:text="@string/addContact" >
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>